--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,45 +5,45 @@ on:
       - "**/*.md"
 
 jobs:
-  test-lint:
-    name: runner / sqlfluff (github-check)
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        sqlfluff:
-          - "1.4.2"
-        config:
-          - ".sqlfluff.bigquery"
-          - ".sqlfluff.postgres"
-          - ".sqlfluff.redshift"
-          - ".sqlfluff.snowflak "
-          - ".sqlfluff.spark"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./
-        id: lint-sql
-        with:
-          github_token: ${{ secrets.github_token }}
-          reporter: github-check
-          sqlfluff_version: ${{ matrix.sqlfluff }}
-          sqlfluff_command: lint
-          templater: jinja
-          working-directory: "${{ github.workspace }}/testdata/test_failed_dbt"
-          config: "${{ github.workspace }}/testdata/test_failed_dbt/${{ matrix.config }}"
-          paths: '${{ github.workspace }}/testdata/test_failed_dbt/models'
-          extra_requirements_txt: "${{ github.workspace }}/testdata/test_failed_dbt/extra_requirements.txt"
-      - name: check the exit code
-        if: ${{ !success() }}
-        run: echo 'The previous step should fail' && exit 1
-      - name: "Test outputs"
-        if: always()
-        shell: bash
-        run: |
-          echo '${{ steps.lint-sql.outputs.sqlfluff-results }}' | jq -r '.'
-          echo '${{ steps.lint-sql.outputs.sqlfluff-results-rdjson }}' | jq -r '.'
-          echo '${{ steps.lint-sql.outputs.sqlfluff-exit-code }}'
-          echo '${{ steps.lint-sql.outputs.reviewdog-exit-code }}'
+#  test-lint:
+#    name: runner / sqlfluff (github-check)
+#    runs-on: ubuntu-latest
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        sqlfluff:
+#          - "1.4.2"
+#        config:
+#          - ".sqlfluff.bigquery"
+#          - ".sqlfluff.postgres"
+#          - ".sqlfluff.redshift"
+#          - ".sqlfluff.snowflak "
+#          - ".sqlfluff.spark"
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: ./
+#        id: lint-sql
+#        with:
+#          github_token: ${{ secrets.github_token }}
+#          reporter: github-check
+#          sqlfluff_version: ${{ matrix.sqlfluff }}
+#          sqlfluff_command: lint
+#          templater: jinja
+#          working-directory: "${{ github.workspace }}/testdata/test_failed_dbt"
+#          config: "${{ github.workspace }}/testdata/test_failed_dbt/${{ matrix.config }}"
+#          paths: '${{ github.workspace }}/testdata/test_failed_dbt/models'
+#          extra_requirements_txt: "${{ github.workspace }}/testdata/test_failed_dbt/extra_requirements.txt"
+#      - name: check the exit code
+#        if: ${{ !success() }}
+#        run: echo 'The previous step should fail' && exit 1
+#      - name: "Test outputs"
+#        if: always()
+#        shell: bash
+#        run: |
+#          echo '${{ steps.lint-sql.outputs.sqlfluff-results }}' | jq -r '.'
+#          echo '${{ steps.lint-sql.outputs.sqlfluff-results-rdjson }}' | jq -r '.'
+#          echo '${{ steps.lint-sql.outputs.sqlfluff-exit-code }}'
+#          echo '${{ steps.lint-sql.outputs.reviewdog-exit-code }}'
 
   test-fix:
     needs: ["test-lint"]
