--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "example query to test snowflake functionality"
 authors = ["datapals <datapals@squareup.com>"]
 
 [tool.poetry.dependencies]
-python = "3.9.10"
+python = "^3.9"
 dbt-core = "1.3.2"
 sqlfluff = "1.4.5"
 sqlfluff-templater-dbt = "1.4.5"
