--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
           - "1.1.0"
           - "1.2.0"
           - "1.3.0"
+          - "1.4.2"
         config:
           - ".sqlfluff.bigquery"
           - ".sqlfluff.postgres"
@@ -49,7 +50,7 @@ jobs:
           echo '${{ steps.lint-sql.outputs.reviewdog-exit-code }}'
 
   test-fix:
-    needs: ["test-lint"]
+    needs: ["test-fix"]
     name: runner / sqlfluff (test-fix)
     runs-on: ubuntu-latest
     strategy:
@@ -60,6 +61,7 @@ jobs:
           - "1.1.0"
           - "1.2.0"
           - "1.3.0"
+          - "1.4.2"
         config:
           - ".sqlfluff.bigquery"
           - ".sqlfluff.postgres"
